--- a/core/public/manifest.json
+++ b/core/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "code snippet",
+  "name": "where code snippets lies",
   "icons": [
     {
       "src": "favicon.ico",
